adding HTTPRequest for Android client